[gd_scene load_steps=14 format=2]

[ext_resource path="res://Hit and Hurt Boxes/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/santa.png" type="Texture" id=2]
[ext_resource path="res://NPCs/Santa.gd" type="Script" id=3]
[ext_resource path="res://UI/DialogBox.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.25141
height = 7.59122

[sub_resource type="CapsuleShape2D" id=8]
height = 4.963

[sub_resource type="CircleShape2D" id=9]
radius = 36.6165

[node name="Santa" type="Node2D"]
position = Vector2( 0.885857, -2.65037 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 34.25, -5 )
frames = SubResource( 6 )
frame = 3
playing = true

[node name="StaticBody2D" type="StaticBody2D" parent="AnimatedSprite"]
visible = false
position = Vector2( -34.75, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/StaticBody2D"]
visible = false
rotation = 1.5708
shape = SubResource( 7 )

[node name="HurtBox" parent="." groups=[
"NPC",
] instance=ExtResource( 1 )]
visible = false
position = Vector2( 35.75, -5.25 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -34.9764, 3.77008 )
shape = SubResource( 8 )

[node name="NoAttackZone" type="Area2D" parent="."]
visible = false
position = Vector2( 35, 0.25 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoAttackZone"]
position = Vector2( -34.9764, 0 )
shape = SubResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogBox" parent="CanvasLayer" instance=ExtResource( 4 )]
position = Vector2( 0, 112 )
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="NoAttackZone" to="." method="_on_NoAttackZone_body_entered"]
[connection signal="body_exited" from="NoAttackZone" to="." method="_on_NoAttackZone_body_exited"]
[connection signal="done_talking" from="CanvasLayer/DialogBox" to="." method="_on_DialogBox_done_talking"]

[editable path="HurtBox"]
